--- a/.env exemple
+++ b/.env exemple
@@ -4,6 +4,7 @@ PROTOCOL=
 HUB_HOST=
 HUB_PORT=
 ORGAN_FOLDER_PATH=
+INTERVAL_TIME =
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 ORGAN_CONTEXT_NAME=
@@ -12,3 +13,5 @@ ORGAN_NETWORK_NAME=
 ORGAN_NETWORK_TYPE=
 
 TIL_API_KEY =
+TIL_API_HOST =
+TIL_API_PORT =
